<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_regist"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/b_bg"
    android:orientation="vertical"
    tools:context="com.itboy.dj.examtool.modules.regist.RegistActivity">
    <TextView
        android:gravity="center"
        android:text="注册"
        android:textColor="@color/color_white"
        android:textSize="@dimen/text_size_16"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_40" />

    <RelativeLayout
        android:background="@drawable/login_one_shape"
        android:layout_width="@dimen/margin_300"
        android:layout_height="@dimen/margin_75"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_60">
        <EditText
            android:id="@+id/regist_input_phone"
            android:layout_width="@dimen/margin_200"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/margin_16"
            android:background="@null"
            android:maxLength="11"
            android:maxLines="1"
            android:digits="0123456789abcdefghigklmnopqrstuvwxyzABCDEFGHIGKLMNOPQRSTUVWXYZ"
            android:hint="@string/regist_phone"
            android:textColorHint="@color/color_white"
            android:textSize="@dimen/text_size_15" />

        <com.dl7.tag.TagView
            android:id="@+id/tag_skip"
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/regist_input_phone"
            android:text="获取验证码"
            android:textSize="@dimen/text_size_13"
            app:tag_auto_check="false"
            app:tag_bg_color="#094B87"
            app:tag_mode="normal"
            app:tag_shape="arc"
            app:tag_text_color="@color/color_white" />
    </RelativeLayout>

    <TextView
        android:layout_gravity="center"
        android:background="@color/barcolor"
        android:layout_width="@dimen/margin_300"
        android:layout_height="1dp" />
    <RelativeLayout
        android:background="@drawable/login_two_shape"
        android:layout_width="@dimen/margin_300"
        android:layout_height="@dimen/margin_75"
        android:layout_gravity="center">

        <EditText
            android:id="@+id/regist_input_code"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/margin_16"
            android:background="@null"
            android:digits="0123456789abcdefghigklmnopqrstuvwxyzABCDEFGHIGKLMNOPQRSTUVWXYZ"
            android:hint="@string/regist_code"
            android:textColorHint="@color/color_white"
            android:textSize="@dimen/text_size_15" />
    </RelativeLayout>
    <TextView
        android:layout_gravity="center"
        android:background="@color/barcolor"
        android:layout_width="@dimen/margin_300"
        android:layout_height="1dp" />
    <RelativeLayout
        android:background="@drawable/login_three_shape"
        android:layout_width="@dimen/margin_300"
        android:layout_height="@dimen/margin_75"
        android:layout_gravity="center">

        <EditText
            android:id="@+id/regist_input_invite_code"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/margin_16"
            android:background="@null"
            android:digits="0123456789abcdefghigklmnopqrstuvwxyzABCDEFGHIGKLMNOPQRSTUVWXYZ"
            android:hint="@string/regist_invite_code"
            android:textColorHint="@color/color_white"
            android:textSize="@dimen/text_size_15" />
    </RelativeLayout>

    <carbon.widget.Button
        app:carbon_rippleColor="#687E98"
        app:carbon_cornerRadius="30dp"
        android:id="@+id/rgt_next"
        android:layout_width="@dimen/margin_225"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_40"
        android:background="@drawable/login_shape"
        android:text="@string/next_step"
        android:textColor="@color/color_white"
        android:textSize="@dimen/text_size_15" />
</LinearLayout>
